hard-gists/2c6abf964810ed74802c/run.log
=== Docker Run Log for 2c6abf964810ed74802c ===
Started at: Mi 29. Okt 13:25:51 CET 2025

[2025-10-29 13:25:51] START: Running container for 2c6abf964810ed74802c
[2025-10-29 13:25:52] SUCCESS: Container f685b4d5bd3e6726336b367703d75223a5ed9551a62aecadd0eb6473b021899f started for 2c6abf964810ed74802c
=== Container logs for 2c6abf964810ed74802c ===
  File "/snippet.py", line 28
    except ValueError, e:
           ^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2c6abf964810ed74802c ===
[2025-10-29 13:25:54] INFO: Container f685b4d5bd3e6726336b367703d75223a5ed9551a62aecadd0eb6473b021899f has stopped
